objects/LAT_IMM_Logs__c.object
<CustomObject>
    <fields>
        <fullName>LAT_Amount__c</fullName>
        <label>Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAT_IMM_Id__c</fullName>
        <label>Id IMM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_LineStatus__c</fullName>
        <label>Line Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_OpportunityLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Line Item</label>
        <referenceTo>LAT_OpportunityLineItem__c</referenceTo>
        <relationshipLabel>LAT IMM Log</relationshipLabel>
        <relationshipName>LAT_IMM_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_Request__c</fullName>
        <label>Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_Response__c</fullName>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_Service__c</fullName>
        <label>Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_TimeStamp__c</fullName>
        <label>Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LAT_uuid__c</fullName>
        <label>uuid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>LAT IMM Log</label>
    <listViews>
        <fullName>IMM_Integration_Error</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>LAT_Service__c</columns>
        <columns>LAT_Amount__c</columns>
        <columns>LAT_IMM_Id__c</columns>
        <columns>LAT_LineStatus__c</columns>
        <columns>LAT_OpportunityLineItem__c</columns>
        <columns>LAT_uuid__c</columns>
        <columns>LAT_Request__c</columns>
        <columns>LAT_Response__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAT_IMM_Id__c</field>
            <operation>equals</operation>
            <value>ERROR</value>
        </filters>
        <label>IMM Integration Error</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Todos</fullName>
        <columns>NAME</columns>
        <columns>LAT_Service__c</columns>
        <columns>LAT_Amount__c</columns>
        <columns>LAT_IMM_Id__c</columns>
        <columns>LAT_LineStatus__c</columns>
        <columns>LAT_OpportunityLineItem__c</columns>
        <columns>LAT_uuid__c</columns>
        <columns>LAT_Response__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>LAT IMM Logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LAT IMM Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>